2007-10-16  Brian Bidulock  <bidulock@openss7.org>

	* configure.ac: fixed AC_FUNC_REALLOC cross-compile problem

2007-09-29  Brian Bidulock  <bidulock@openss7.org>

	* doc/drafts/idrefs: add new SCTP 4960 reference

	* src/mibs/OPENSS7-M2UA-ASP-MIB.mib: add mibs
	* src/mibs/OPENSS7-M2UA-MIB.mib: add mibs
	* src/mibs/OPENSS7-M3UA-ASP-MIB.mib: add mibs
	* src/mibs/OPENSS7-SIGTRAN-TC.mib: add mibs

2007-08-19  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: do not need YFLAG
	* scripts/.cvsignore: add ylwrap
	* src/drivers/isua_as.c: move stdbool.h to compat.c
	* src/drivers/m2ua_as.c: move stdbool.h to compat.c
	* src/drivers/m3ua_as.c: move stdbool.h to compat.c
	* src/drivers/sua_as.c: move stdbool.h to compat.c
	* src/drivers/tua_as.c: move stdbool.h to compat.c
	* src/drivers/ua_as.c: move stdbool.h to compat.c
	* src/modules/m2pa_sl.c: move stdbool.h to compat.c
	* src/modules/m2ua_as.c: move stdbool.h to compat.c
	* src/modules/m3ua_as.c: move stdbool.h to compat.c
	* src/modules/sua_as.c: move stdbool.h to compat.c
	* src/modules/tua_as.c: move stdbool.h to compat.c
	* src/util/m2payac.y: add YFLAG equivalents

2007-08-15  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: GPLv3 updates
	* NEWS: GPLv3 updates
	* README: GPLv3 updates
	* README-cvs: GPLv3 updates
	* THANKS: GPLv3 updates
	* doc/manual/Makefile.am: GPLv3 updates
	* doc/manual/news.texi: GPLv3 updates
	* src/drivers/isua_as.c: GPLv3 updates
	* src/drivers/m2ua.c: GPLv3 updates
	* src/drivers/m2ua_as.c: GPLv3 updates
	* src/drivers/m3ua.c: GPLv3 updates
	* src/drivers/m3ua_as.c: GPLv3 updates
	* src/drivers/m3ua_sg.c: GPLv3 updates
	* src/drivers/sua.c: GPLv3 updates
	* src/drivers/sua_as.c: GPLv3 updates
	* src/drivers/tali.c: GPLv3 updates
	* src/drivers/tua.c: GPLv3 updates
	* src/drivers/tua_as.c: GPLv3 updates
	* src/drivers/ua.c: GPLv3 updates
	* src/drivers/ua_as.c: GPLv3 updates
	* src/modules/m2pa_dl.c: GPLv3 updates
	* src/modules/m2pa_sl.c: GPLv3 updates